--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="error">Error</string>
     <string name="dialog_ok">ОК</string>
     <string name="error_default">Unknown error</string>
+    <string name="contactId">contact #%1$s</string>
 </resources>
