--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="web">Web:</string>
     <string name="phone">Phone:</string>
     <string name="city">City:</string>
+    <string name="save_to_db">Save to DB</string>
 </resources>
